# Widget-API-Meteo

./: .env  .gitignore  app.js  main.js  package-lock.json  package.json
OpenJarvis/: .gitignore  README.md  bot.js  package.json  pyproject.toml
OpenJarvis/config/: settings.yaml  tools.yaml
OpenJarvis/jarvis/: __init__.py  main.py
OpenJarvis/jarvis/agent/: executor.py  loop.py  memory.py  planner.py
OpenJarvis/jarvis/llm/: base.py  ollama.py  openai.py
OpenJarvis/jarvis/prompts/: agent.txt  system.txt
OpenJarvis/jarvis/tools/: file_tools.py  registry.py  search_tools.py  shell_tools.py
OpenJarvis/jarvis/utils/: logger.py  parser.py
OpenJarvis/scripts/: setup.sh
public/: styles.css
views/: index.ejs
